force-app/main/default/objects/ssot__ReceivedDocument__dlm/fields/ssot__DirectionFlowType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DirectionFlowType__c</fullName>
    <label>Direction Flow Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DirectionFlowType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>