force-app/main/default/objects/ssot__ReceivedDocument__dlm/fields/ssot__IsAutoOcrDisabled__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAutoOcrDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Ocr Disabled</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAutoOcrDisabled</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>