force-app/main/default/objects/ssot__ReceivedDocument__dlm/fields/ssot__OriginSourceTypeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__OriginSourceTypeText__c</fullName>
    <label>Origin Source Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OriginSourceTypeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>