force-app/main/default/objects/ssot__ReceivedDocument__dlm/fields/ssot__Priority__c.field-meta.xml
<CustomField>
    <fullName>ssot__Priority__c</fullName>
    <label>Priority Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Priority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>